Add API-Funktion to get children for a analysis category
